# copilot_followup_mcp

./: .gitignore  README.md  pyproject.toml  server.py
src/copilot_followup_mcp/: __init__.py  interactive_cli.py  terminal_launcher.py
