[project]
name = "copilot-followup-mcp"
version = "0.1.0"
description = "MCP server for VSCode Copilot Chat with interactive follow-up questions"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastmcp>=0.1.0",
    "prompt-toolkit>=3.0.43",
    "psutil>=5.9.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/copilot_followup_mcp"]

[dependency-groups]
dev = []

[project.scripts]
copilot-followup-mcp = "copilot_followup_mcp.server:main"
